--- a/exercicios/ex026/mq004/imagens/estilos/media-query.css
+++ b/exercicios/ex026/mq004/imagens/estilos/media-query.css
@@ -1,7 +1,65 @@
 @charset "UTF-8";
 
 /*Todas as demais medias*/
+/*
+    Typical Device breakpoints
+-------------------------------
+Pequenas telas: até 600px
+Celular: de 600px até 768px
+Tablet: 768px até 992px
+Desktop: 992px até 1200px
+Grandes telas: acima de 1200px
+*/
 
-@media screen {
-    
+@media print{
+    *{
+        font-family: 'Courier New', Courier, monospace;
+    }
+    main{
+        border: 2px solid black;
+    }
+    main h1{
+        
+        text-shadow: none;
+        color: black;
+    }
+    main::after{
+        content: 'Essa impressão';
+        text-decoration: overline;
+    }
+
+}
+@media screen and (min-width: 768px) and (max-width: 992px){
+    body{
+        background-image: url(../back-tablet.jpg);
+    }
+    img#phone {display: none;}
+    img#tablet {display: block;}
+    img#print {display: none;}
+    img#pc {display: none;}
+    img#tv {display: none;}
+}
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+    body{
+        background-image: url(../back-pc.jpg);
+    }
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#print {display: none;}
+    img#pc {display: block;}
+    img#tv {display: none;}
+}
+
+@media screen and (min-width: 1200px) {
+    body{
+        background-image: url(../back-tv.jpg);
+    }
+    body{
+        background-image: url(../back-tv.jpg);
+    }
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#print {display: none;}
+    img#pc {display: none;}
+    img#tv {display: block;}
 }
